// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <GifGrid /> component should show items when loaded 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Test
  </h3>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Test <GifGrid /> component should show the component 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Test
  </h3>
  <p>
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
